rimozione code smell 5+