@@ -312,10 +312,10 @@ public class EarningController {
                 logger.log(Level.INFO,"Annullati pendenti tavolo {0}", tavolo);
             } else if (result.get() == deliveredPaga) {
                 pendingOrderIds.forEach(id -> earningUseCase.setOrderStatus(id, "delivered"));
-                logger.log(Level.INFO,"Segnati come delivered pendenti tavolo ",  tavolo);
+                logger.log(Level.INFO,"Segnati come delivered pendenti tavolo {0}",  tavolo);
                 List<Order> allDeliveredForTable = DatabaseService.getOrdersToPay().stream()
                         .filter(o -> o.getTavolo() == tavolo)
-                        .collect(Collectors.toList());
+                        .toList();
                 deliveredOrdersShown = allDeliveredForTable;
             }
         }
